--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ devtools::install_github("jacobpstein/dfmirroR")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem. Let's say you are working with the `airquality` dataset. This contains a `Temp` column that is approximately normal based on a basic Shapiro-Wilk test and another column `Ozone`, which is non-normally distributed. You want to simulate a data set to test a model and need to mirror `airquality` but with more observations and then create a reproducible example.
+This is a basic example which shows you how to solve a common problem. Let's say you are working with the `airquality` dataset. This contains a `Temp` column that is approximately normal based on a Shapiro-Wilk test and another column `Ozone`, which is non-normally distributed. You want to simulate a data set to test a model and need to mirror `airquality` but with more observations and then create a reproducible example.
 
 Here's what the `Ozone` column looks like in the original data:
 ```{r example1}
