Thanks to the R Core Team

--- a/README.Rmd
+++ b/README.Rmd
@@ -90,3 +90,5 @@ cat(air_mirror$code)
 This package is indebted to the great [`fitdistrplus`](https://github.com/aursiber/fitdistrplus) package, which allows `dfmirroR` to dynamically mimic the distribution of input data. For more, see: 
   
 Marie Laure Delignette-Muller, Christophe Dutang (2015). *fitdistrplus: An R Package for Fitting Distributions. Journal of Statistical Software*. https://www.jstatsoft.org/article/view/v064i04 DOI 10.18637/jss.v064.i04.
+
+This package also pull from the core R [`stats`](https://stat.ethz.ch/R-manual/R-devel/library/stats/html/00Index.html) package. Special thanks to the R Core Team, without whom I would almost definitely be unemployed.
