--- a/README.Rmd
+++ b/README.Rmd
@@ -76,7 +76,7 @@ ggplot(air_mirror$simulated_df) +
 
 ## Print code to share your simulated data
 
-There are other packages that can mirror a dataframe. The excellent [`faux`](https://debruine.github.io/faux/) comes to mind. However, one addition of the `dfmirroR` package is that it prints code to add to a reproducible example if you need to ask a question on Stackoverflow or elsewhere. 
+There are other packages that can mirror a dataframe. The excellent [`faux`](https://debruine.github.io/faux/) comes to mind. However, one addition of the `dfmirroR` package is that it prints code to add to a reproducible example if you need to ask a question on Stackoverflow.com or elsewhere. 
 
 For example, from our `air_mirror` list object above, we can extract the `code` object, which is just a string containing the relevant code. Combining this object with the `cat()` function provides clean, easily shareable output.
 
