--- a/README.Rmd
+++ b/README.Rmd
@@ -36,10 +36,10 @@ devtools::install_github("jacobpstein/dfmirroR")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem. Let's say you are working with the `airquality` dataset. This contains a `Temp` column that is approximately normal based on a Shapiro-Wilk test and another column `Ozone`, which is non-normally distributed. You want to simulate a data set to test a model and need to mirror `airquality` but with more observations and then create a reproducible example.
+This is a basic example which shows you how to solve a common problem. Let's say you are working with the `airquality` dataset. This contains a `Wind` column that is approximately normal based on a Shapiro-Wilk test and another column `Ozone`, which is non-normally distributed. You want to simulate a data set to test a model and need to mirror `airquality` but with more observations and then create a reproducible example.
 
 Here's what the `Ozone` column looks like in the original data:
-```{r example1}
+```{r example1, warning = FALSE}
 library(dfmirroR)
 library(ggplot2)
 
@@ -48,7 +48,7 @@ data(airquality)
 # take a look at the Ozone variable
 
 ggplot(airquality) +
-  geom_histogram(aes(Ozone), col = "white", fill = "#AFDFEF", bins = 20) +
+  geom_histogram(aes(Ozone), col = "white", fill = "#AFDFEF", bins = 30) +
   theme_minimal() +
   labs(title = "Distribution of 153 Ozone observations from the airquality dataset")
 
@@ -59,16 +59,19 @@ Now, let's run `dfmirrorR` to create a similar column.
 
 ```{r example2}
 
-air_mirror <- simulate_dataframe(airquality, num_obs = 1000, columns_to_simulate = c("Ozone", "Temp"))
+# set a seed
+set.seed(3326)
+
+air_mirror <- simulate_dataframe(airquality, num_obs = 1000, columns_to_simulate = c("Ozone", "Wind"))
 ```
 
-This creates a `list()` object that contains a new data frame with 1,000 observations based on the distributions of the `Ozone` and `Temp` columns in the `input_df`.  
+This creates a `list()` object that contains a new data frame with 1,000 observations based on the distributions of the `Ozone` and `Wind` columns in the `input_df`.  
 
 Take a look at the mirrored colum for Ozone:
-```{r example3}
+```{r example3, warning = FALSE}
 
 ggplot(air_mirror$simulated_df) +
-  geom_histogram(aes(Ozone), col = "white", fill = "#AFDFEF", bins = 20) +
+  geom_histogram(aes(Ozone), col = "white", fill = "#AFDFEF", bins = 30) +
   theme_minimal() +
   labs(title = "Distribution of 1,000 Ozone observations from a mirrored dataset")
 
