--- a/README.Rmd
+++ b/README.Rmd
@@ -99,9 +99,13 @@ cat(air_mirror$code)
 
 ### Citations
 This package is indebted to the great [`fitdistrplus`](https://github.com/aursiber/fitdistrplus) package, which allows `dfmirroR` to dynamically mimic the distribution of input data. For more, see: 
-  
+
 Marie Laure Delignette-Muller, Christophe Dutang (2015). *fitdistrplus: An R Package for Fitting Distributions. Journal of Statistical Software*. https://www.jstatsoft.org/article/view/v064i04 DOI 10.18637/jss.v064.i04.
 
-David Meyer, et al. [e1071](https://cran.r-project.org/web/packages/e1071/e1071.pdf)
+This package relies on the `skewness` function from:
+David Meyer, et al. [e1071](https://cran.r-project.org/web/packages/e1071/e1071.pdf).
+
+The `MASS` package also provides some functionality. Learn more here:
+Venables WN, Ripley BD (2002). Modern Applied Statistics with S, Fourth edition. Springer, New York. ISBN 0-387-95457-0, https://www.stats.ox.ac.uk/pub/MASS4/.
 
 This package also pulls from the core R [`stats`](https://stat.ethz.ch/R-manual/R-devel/library/stats/html/00Index.html) package. Special thanks to the R Core Team, without whom I would almost definitely be unemployed. 
